# graphql-airports

./: .gitmodules  README.md  package-lock.json  package.json  pnpm-lock.yaml
autocannon/: package-lock.json  package.json
autocannon/src/: autocannon.js
golang/: go.mod  go.sum  gqlgen.yml  schema.graphqls  server.go
golang/graph/: airports.go  generated.go  resolver.go  schema.graphqls  schema.resolvers.go
golang/graph/model/: models_gen.go
k6/: graphql-test.js
node/: package-lock.json  package.json
node/src/: benchmark.js  index.js  server.js
rust/: Cargo.toml
rust/src/: main.rs
src/: benchmark.js  index.js  stuff.js
