[package]
name = "graphql-airports"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.9"
lazy_static = "1.5.0"
once_cell = "1.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.28"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
